{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 82,
  "lineage": "4fee06fa-8ea6-6b79-68e7-c0827df882b6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-gitlab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0206f47ffbd085a63",
            "association_id": "eipassoc-08cea48e91b907d1c",
            "domain": "vpc",
            "id": "eipalloc-0206f47ffbd085a63",
            "instance": "i-0e06e247065c0203b",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-08a36c65296b1c757",
            "private_dns": "ip-100-69-0-136.eu-central-1.compute.internal",
            "private_ip": "100.69.0.136",
            "public_dns": "ec2-18-158-11-174.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.158.11.174",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.gitlab",
            "aws_network_interface.gitlab",
            "aws_security_group.ingress-all",
            "aws_subnet.public-subnet",
            "aws_vpc.VPN_attached_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-023f65ea63da916ff",
            "associate_with_private_ip": "100.69.0.114",
            "association_id": "eipassoc-0639a290df01d2d27",
            "domain": "vpc",
            "id": "eipalloc-023f65ea63da916ff",
            "instance": "i-01b41260f70f1840a",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0f586584354dca34c",
            "private_dns": "ip-100-69-0-114.eu-central-1.compute.internal",
            "private_ip": "100.69.0.114",
            "public_dns": "ec2-3-120-230-7.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.120.230.7",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.vpn",
            "aws_security_group.ingress-all",
            "aws_subnet.public-subnet",
            "aws_vpc.VPN_attached_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gitlab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0913ce6e95f845f29",
            "arn": "arn:aws:ec2:eu-central-1:719521441770:instance/i-0e06e247065c0203b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e06e247065c0203b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.large",
            "ipv6_address_count": 0,
            "key_name": "leo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-08a36c65296b1c757"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08a36c65296b1c757",
            "private_dns": "ip-100-69-0-136.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "100.69.0.136",
            "public_ip": "18.158.11.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 180,
                "throughput": 0,
                "volume_id": "vol-0017dc5723096bc3e",
                "volume_size": 60,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0477a0246ef16046b",
            "tags": {
              "Purpose": "Gitlab server"
            },
            "tags_all": {
              "Purpose": "Gitlab server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eb642a5927e4a42f"
            ]
          },
          "dependencies": [
            "aws_network_interface.gitlab",
            "aws_security_group.ingress-all",
            "aws_subnet.public-subnet",
            "aws_vpc.VPN_attached_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d1ddd83282187d18",
            "arn": "arn:aws:ec2:eu-central-1:719521441770:instance/i-01b41260f70f1840a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b41260f70f1840a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.large",
            "ipv6_address_count": 0,
            "key_name": "leo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0f586584354dca34c"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f586584354dca34c",
            "private_dns": "ip-100-69-0-114.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "100.69.0.114",
            "public_ip": "3.120.230.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d1901f3e3109ebec",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0477a0246ef16046b",
            "tags": {
              "Purpose": "VPN server"
            },
            "tags_all": {
              "Purpose": "VPN server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f65747ac1c3fe3b5"
            ]
          },
          "dependencies": [
            "aws_network_interface.vpn",
            "aws_security_group.ingress-all",
            "aws_subnet.public-subnet",
            "aws_vpc.VPN_attached_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpn-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:719521441770:internet-gateway/igw-046ea1ca62126df35",
            "id": "igw-046ea1ca62126df35",
            "owner_id": "719521441770",
            "tags": {
              "Name": "VPN server"
            },
            "tags_all": {
              "Name": "VPN server"
            },
            "vpc_id": "vpc-0555be1b0a263aeed"
          },
          "dependencies": [
            "aws_vpc.VPN_attached_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "gitlab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:719521441770:network-interface/eni-08a36c65296b1c757",
            "attachment": [
              {
                "attachment_id": "eni-attach-0782356461ec20112",
                "device_index": 0,
                "instance": "i-0e06e247065c0203b"
              }
            ],
            "id": "eni-08a36c65296b1c757",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:c2:38:aa:2e:4e",
            "owner_id": "719521441770",
            "private_ip": "100.69.0.136",
            "private_ip_list": [
              "100.69.0.136"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "100.69.0.136"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0f65747ac1c3fe3b5"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0477a0246ef16046b",
            "tags": {
              "Name": "gitlab_primary_interface"
            },
            "tags_all": {
              "Name": "gitlab_primary_interface"
            }
          },
          "dependencies": [
            "aws_security_group.ingress-all",
            "aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:719521441770:network-interface/eni-0f586584354dca34c",
            "attachment": [
              {
                "attachment_id": "eni-attach-0ab3f4e6b8ae5b224",
                "device_index": 0,
                "instance": "i-01b41260f70f1840a"
              }
            ],
            "id": "eni-0f586584354dca34c",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:98:34:f8:0e:5e",
            "owner_id": "719521441770",
            "private_ip": "100.69.0.114",
            "private_ip_list": [
              "100.69.0.114"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "100.69.0.114"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0f65747ac1c3fe3b5"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0477a0246ef16046b",
            "tags": {
              "Name": "vpn_primary_interface"
            },
            "tags_all": {
              "Name": "vpn_primary_interface"
            }
          },
          "dependencies": [
            "aws_security_group.ingress-all",
            "aws_subnet.public-subnet",
            "aws_vpc.VPN_attached_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:719521441770:route-table/rtb-08e76fb7cae82f3dd",
            "id": "rtb-08e76fb7cae82f3dd",
            "owner_id": "719521441770",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "100.69.14.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0f586584354dca34c",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "100.69.15.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0f586584354dca34c",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-046ea1ca62126df35",
                "instance_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "VPN server"
            },
            "tags_all": {
              "Name": "VPN server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0555be1b0a263aeed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpn-gw",
            "aws_network_interface.vpn",
            "aws_vpc.VPN_attached_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8aa13f8bb496d75",
            "route_table_id": "rtb-08e76fb7cae82f3dd",
            "subnet_id": "subnet-0477a0246ef16046b"
          },
          "dependencies": [
            "aws_internet_gateway.vpn-gw",
            "aws_network_interface.vpn",
            "aws_route_table.route-table-vpn",
            "aws_security_group.ingress-all",
            "aws_subnet.public-subnet",
            "aws_vpc.VPN_attached_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:719521441770:security-group/sg-0f65747ac1c3fe3b5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f65747ac1c3fe3b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all-sg",
            "name_prefix": "",
            "owner_id": "719521441770",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0555be1b0a263aeed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPN_attached_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:719521441770:subnet/subnet-0477a0246ef16046b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "100.69.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0477a0246ef16046b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "719521441770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0555be1b0a263aeed"
          },
          "dependencies": [
            "aws_vpc.VPN_attached_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPN_attached_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:719521441770:vpc/vpc-0555be1b0a263aeed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "100.69.0.0/22",
            "default_network_acl_id": "acl-0e0c0cdb2428e1d23",
            "default_route_table_id": "rtb-0f7cc4166c04f651c",
            "default_security_group_id": "sg-0eb642a5927e4a42f",
            "dhcp_options_id": "dopt-0b98370d150ef2828",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0555be1b0a263aeed",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f7cc4166c04f651c",
            "owner_id": "719521441770"
          }
        }
      ]
    }
  ]
}